fix: 모달 에러 수정 및 nav z-index 모달보다 낮게

--- a/src/components/layout/navbar/index.module.scss
+++ b/src/components/layout/navbar/index.module.scss
@@ -7,7 +7,7 @@
     @include m.flex-layout(row, normal, space-evenly);
     border: 2px solid;
     border-radius: var(--border-radius);
-    z-index: 1000;
+    z-index: 100;
     background-color: rgb(var(--color-dark));
 
     .profile {
